[package]
name = "wasmun"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
serde = { version = "1.0.208", features = ["derive"] }
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
tokio-stream = "0.1.15"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
wat = "1.215.0"
